--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,7 @@
             "name": "Przemysław Szwaczka"
         }
     ],
-    "require": {}
+    "require-dev": {
+        "phpunit/phpunit": "^11"
+    }
 }
