--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,9 @@
     ],
     "require-dev": {
         "phpunit/phpunit": "^11"
+    },
+    "require": {
+        "league/iso3166": "^4.3",
+        "alcohol/iso4217": "^4.1"
     }
 }
